--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,12 @@ jobs:
       - run:
           name: Print the Current Time
           command: date
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only:
+                - /.*packer.*/
